--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: python
 python:
-  - "2.7"
-install: "pip install ."
+- '2.7'
+install: pip install .
 script: nosetests
+deploy:
+  provider: pypi
+  user: tkuhlman-travis
+  password:
+    secure: hLO9ITwUZuWXkEe+ngp/cfVgPLhnAUKAFNVztnLSeiRWq3oDiEjK5qi7bTNgaMOm5LJpHLNfOTVlcZTGXujHVOMycFmwQzk8AkM0xcY14mzH0A1cJElu79LGhT8KRXYKa6cCAO/RT8XHqVQqRz4yMpnhQtS8JROgx8ZtAR3PcFA=
+  on:
+    tags: true
+    all_branches: true
+  distributions: sdist bdist_egg bdist_wheel
